Aplicando SASSII+SEO

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,9 @@
 @import "./components/variables";
 @import "./components/header";
+@import "./components/footer";
 @import "./components/global";
 @import "./pages/index";
+@import "./pages/carta";
+@import "./pages/ubicacion";
+@import "./pages/contacto";
+@import "./pages/nosotros";
